--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Chetan07j/pay-instamojo#readme",
   "dependencies": {
-    "camelcase-keys": "^4.2.0"
+    "camelcase-keys": "^4.2.0",
+    "request": "^2.85.0"
   }
 }
